Clean pipeline, build VSIX/MPack to artifacts path
We opt-in to the `Pack` capability, which gives us the `Pack` context
menu on the project, but we customize its behavior by causing the build
of the VSIX or MPack for local development (where this is typically not
necessary during the inner devloop). In CI, we always build both.

--- a/src/Clide.Addin/Clide.Addin.csproj
+++ b/src/Clide.Addin/Clide.Addin.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <TargetOS>Unix</TargetOS>
+
+    <CreatePackage>$(CI)</CreatePackage>
+    <IncludePack>false</IncludePack>
+    <ImportNuGetBuildTasksPackTargetsFromSdk>false</ImportNuGetBuildTasksPackTargetsFromSdk>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,5 +18,20 @@
     <ProjectReference Include="..\Clide.Mac\Clide.Mac.csproj" />
     <ProjectReference Include="..\Clide.Core.Mac\Clide.Core.Mac.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectCapability Include="Pack" />
+  </ItemGroup>
+
+  <Target Name="Pack" DependsOnTargets="_BeforePack;PackageAddin" />
+  <Target Name="_BeforePack" Condition="!$(CI)">
+    <PropertyGroup>
+      <CreatePackage>true</CreatePackage>
+    </PropertyGroup>
+  </Target>
+
+  <Target Name="_CopyAddinToPackageOutputPath" AfterTargets="PackageAddin" Condition="'$(PackageOutputPath)' != '' And '$(PackageFile)' != ''">
+    <Copy SourceFiles="$(PackageFile)" DestinationFolder="$(PackageOutputPath)" SkipUnchangedFiles="true" />
+  </Target>
 
 </Project>
