Don't import any IDE SDK targets if on the "wrong" OS

--- a/src/Clide.Addin/Clide.Addin.csproj
+++ b/src/Clide.Addin/Clide.Addin.csproj
@@ -9,8 +9,8 @@
     <ImportNuGetBuildTasksPackTargetsFromSdk>false</ImportNuGetBuildTasksPackTargetsFromSdk>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MonoDevelop.Addins" Version="0.4.7" />
+  <ItemGroup Condition="'$(TargetOS)' == '$(OS)'">
+    <PackageReference Include="MonoDevelop.Addins" Version="0.4.7" Condition="'$(TargetOS)' == '$(OS)'"/>
   </ItemGroup>
 
   <ItemGroup>
