--- a/src/Clide.Addin/Clide.Addin.csproj
+++ b/src/Clide.Addin/Clide.Addin.csproj
@@ -9,7 +9,7 @@
     <ImportNuGetBuildTasksPackTargetsFromSdk>false</ImportNuGetBuildTasksPackTargetsFromSdk>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetOS)' == '$(OS)'">
+  <ItemGroup>
     <PackageReference Include="MonoDevelop.Addins" Version="0.4.7" Condition="'$(TargetOS)' == '$(OS)'"/>
   </ItemGroup>
 
