--- a/src/Clide.Core.Mac/Clide.Core.Mac.csproj
+++ b/src/Clide.Core.Mac/Clide.Core.Mac.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -31,6 +31,5 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-
 
 </Project>
