Don't try to run unit tests from other OS target

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -53,7 +53,7 @@
   </PropertyGroup>
 
   <Target Name="Test"
-          Condition="'$(IncludeTests)' == 'true' or '$(IncludeIntegrationTests)' == 'true'"
+          Condition="'$(TargetOS)' == '$(OS)' and ('$(IncludeTests)' == 'true' or '$(IncludeIntegrationTests)' == 'true')"
           DependsOnTargets="GetTargetPath">
     <PropertyGroup>
       <TestResultsDir Condition="'$(TestResultsDir)' == ''">$(OutputPath)</TestResultsDir>
