Ensure the addin version is also set before packing

--- a/src/Version.targets
+++ b/src/Version.targets
@@ -28,7 +28,7 @@
 
   <!-- '$(ExcludeRestorePackageImports)' == 'true' when invoking /t:Restore -->
   <Target Name="SetVersion"
-          BeforeTargets="GetAssemblyVersion;GetPackageVersion"
+          BeforeTargets="PrepareForBuild;GetAssemblyVersion;GetPackageVersion;Pack"
           DependsOnTargets="GitVersion"
           Condition="'$(ExcludeRestorePackageImports)' != 'true' and '$(GitInfoImported)' == 'true'">
     <PropertyGroup>
