Publish binaries and symbols using the Artifacts SDK
This aligns the pipeline definition with our existing BD

--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -1,4 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Microsoft.Build.Artifacts" Version="2.0.16" />
+
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <TargetOS>Windows_NT</TargetOS>
