--- a/src/Clide.Core.Mac/Clide.Core.Mac.csproj
+++ b/src/Clide.Core.Mac/Clide.Core.Mac.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Microsoft.Build.Artifacts" Version="2.0.16" />
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
