--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -52,6 +52,10 @@
     <NoWarn>$(NoWarn);0649</NoWarn>
   </PropertyGroup>
 
+  <PropertyGroup Label="Artifacts SDK">
+    <EnableDefaultArtifacts Condition="'$(EnableDefaultArtifacts)' == '' and '$(TargetOS)' == '$(OS)'">true</EnableDefaultArtifacts>
+  </PropertyGroup>
+
   <Target Name="Test"
           Condition="'$(TargetOS)' == '$(OS)' and ('$(IncludeTests)' == 'true' or '$(IncludeIntegrationTests)' == 'true')"
           DependsOnTargets="GetTargetPath">
