--- a/src/Version.targets
+++ b/src/Version.targets
@@ -11,12 +11,12 @@
   </PropertyGroup>
 
   <Target Name="Version" DependsOnTargets="SetVersion;GitInfoReport">
-    <Message Text="##vso[build.updatebuildnumber]$(PackageVersion)" Importance="high" Condition="'$(TF_BUILD)' == 'true'" />
+    <Message Text="##vso[build.updatebuildnumber]$(PackageVersion)" Importance="high" Condition="$(CI)" />
     <Message Importance="high" Text="  PackageVersion=$(PackageVersion)
   AssemblyVersion=$(AssemblyVersion)" />
   </Target>
 
-  <Target Name="_SetLocalCommits" BeforeTargets="_GitPopulateVersionInfo" Condition="'$(CI)' != 'true'">
+  <Target Name="_SetLocalCommits" BeforeTargets="_GitPopulateVersionInfo" Condition="!$(CI)">
     <PropertyGroup>
       <!-- Local builds should always be commit count +1, since we'll be always working on the next version to be published. -->
       <GitCommits>$([MSBuild]::Add('$(GitCommits)', '1'))</GitCommits>
