Report and upload symbols separately for Win/Mac
Since the Mac-built binaries will not be equivalent to the Win ones, the symbols won't match either, and the symbol archiving process for VS insertions requires unique file names for archival. Also, the current process for VS might not be the same for VSM, so leave them separate and figure out how to upload symbols for VSM later when Clide is inserted there down the road

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -99,7 +99,8 @@
     <BaseArtifactsPath>$(BUILD_ARTIFACTSTAGINGDIRECTORY)</BaseArtifactsPath>
     <BaseArtifactsPath Condition="'$(BaseArtifactsPath)' == ''">$(MSBuildThisFileDirectory)..</BaseArtifactsPath>
     <BaseArtifactsPath>$([System.IO.Path]::GetFullPath($(BaseArtifactsPath.TrimEnd('/').TrimEnd('\'))/artifacts))</BaseArtifactsPath>
-    <ArtifactsPath>$(BaseArtifactsPath)</ArtifactsPath>
+    <ArtifactsPath Condition="'$(OS)' == 'Windows_NT'">$(BaseArtifactsPath)/win</ArtifactsPath>
+    <ArtifactsPath Condition="'$(OS)' != 'Windows_NT'">$(BaseArtifactsPath)/mac</ArtifactsPath>
     <DefaultArtifactsFileMatch>Clide*exe Clide*dll Clide*pdb</DefaultArtifactsFileMatch>
   </PropertyGroup>
 
