--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,9 +3,7 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="xunit.vsix" value="https://nugets.blob.core.windows.net/xunit/index.json" />
-    <add key="xvssdk" value="https://nugets.blob.core.windows.net/xvssdk/index.json" />
-    <add key="merq" value="https://nugetized.blob.core.windows.net/merq/index.json" />
+    <add key="xamarin-impl" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/xamarin-impl/nuget/v3/index.json" />
     <add key="nugetizer" value="https://ci.appveyor.com/nuget/nugetizer3000" />
   </packageSources>
   <disabledPackageSources>
