--- a/src/Clide.Core.Windows/Clide.Core.Windows.csproj
+++ b/src/Clide.Core.Windows/Clide.Core.Windows.csproj
@@ -14,7 +14,6 @@
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -24,6 +23,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide.Windows\Clide.Windows.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build" Version="$(MicrosoftBuildversion)" />
+    <PackageReference Include="Microsoft.VisualStudio.ProjectSystem" Version="$(ProjectSystemVersion)" />
   </ItemGroup>
 
   <ItemGroup>
