--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -107,7 +107,7 @@
   <PropertyGroup Label="Package Versions">
     <MerqVersion>1.1.1</MerqVersion>
     <MerqVisualStudioVersion>1.1.79</MerqVisualStudioVersion>
-    <RxVersion>4.3.2</RxVersion>
+    <RxVersion>1.0.0-rc.3</RxVersion>
     <FluentInterfaceVersion>2.0.3</FluentInterfaceVersion>
     <StringResourcesVersion>3.1.10</StringResourcesVersion>
     <TracerVersion>2.0.8</TracerVersion>
