Added missing integration tests for CPS libraries

--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -24,7 +24,7 @@
     <Compile Include="**\*.cs" Exclude="Content\**;bin\**;obj\**" />
     <None Include="Clide.IntegrationTests.ruleset" />
     <None Include="xunit.runner.json" />
-    <Content Include="Content\**\*.*">
+    <Content Include="Content\**\*.*" Exclude="Content\**\bin\**;Content\**\obj\**" >
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
