Add initial projects to contain cross-ide code
Clide.csproj will contain interfaces and implementations that are
needed by consumers (i.e. XA CPS project) to both access but also
extend the basic functionality of Clide (i.e. provide adapters
and annotate classes with the relevant attributes).

Clide.Core.csproj will contain internal implementations in Clide
that are compatible across IDEs and is referenced by both Mac and
Windows Core projects.

--- a/src/Clide.Core.Mac/Clide.Core.Mac.csproj
+++ b/src/Clide.Core.Mac/Clide.Core.Mac.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide.Mac\Clide.Mac.csproj" />
+    <ProjectReference Include="..\Clide.Core\Clide.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
