--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,5 +1,19 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <PropertyGroup>
+    <!-- The Sdks\NuGet.Build.Tasks.Pack\build\NuGet.Build.Tasks.Pack.targets unconditionally sets 
+			PackageId=AssemblyName if no PackageId is provided, and then defaults IsPackable=true if 
+			a PackageId is set (?!), meaning that by default everything is packable in Sdk-style 
+			projects. 
+			The Directory.Build.targets are imported after the user's project properties have been 
+			read, and therefore gives us a chance to inspect if an explicit PackageId was provided, 
+			before the NuGet SDK target is imported and defaults it. At this point, we can give 
+			IsPackable a more sensible default, making it false if no PackageId was provided at this 
+			point. -->
+    <IsPackable Condition="'$(PackageId)' == ''">false</IsPackable>
+    <DocumentationFile Condition="'$(PackageId)' != ''">$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
+  </PropertyGroup>
+
   <!-- Common Packages -->
   <ItemGroup>
     <PackageReference Include="Merq" Version="$(MerqVersion)" Pack="false" />
